# DTEAM-django-practical-test

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  Dockerfile.dev  Makefile  README.md  SETUP.md  docker-compose.dev.yml  docker-compose.yml  env.docker  env.example  pyproject.toml  setup-docker.bat  setup-docker.ps1  setup-docker.py  setup-docker.sh
CVProject/: celery.py  settings.py  urls.py
CVProject/settings/: __init__.py  base.py  development.py  production.py  testing.py
audit/: admin.py  managers.py  middleware.py  models.py  tests.py  urls.py  views.py
audit/migrations/: 0001_initial.py
audit/tests/: test_views.py
authentication/: forms.py  urls.py  views.py
docker/nginx/: default.conf  nginx.conf
docker/postgres/: init.sql
main/: admin.py  constants.py  context_processors.py  models.py  tasks.py  tests.py  urls.py  views.py
main/api/: urls.py  views.py
main/fixtures/: README.md  initial_contacts_data.json  initial_cv_data.json  initial_data.json  initial_projects_data.json  initial_skills_data.json  jane_smith_complete.json
main/forms/: __init__.py  email_forms.py
main/managers/: __init__.py  cv_manager.py
main/migrations/: 0001_initial.py  0002_alter_contact_contact_type_alter_contact_cv_and_more.py
main/permissions/: __init__.py
main/serializers/: __init__.py  cv_serializers.py
main/services/: email_service.py  pdf_service.py
main/templatetags/: settings_extras.py
main/tests/: test_api.py  test_api_simple.py  test_context_processors.py  test_settings_view.py  test_template_tags.py
templates/: base.html
(+13 files in other folders)
