[tool.poetry]
name = "dteam-django-practical-test"
version = "0.1.0"
description = "DTEAM Django Developer Practical Test"
authors = ["Developer"]
readme = "README.md"
packages = [{include = "CVProject"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.0"
djangorestframework = "^3.14.0"
celery = "^5.3.0"
redis = "^5.0.0"
psycopg2-binary = "^2.9.0"
pillow = "^10.0.0"
reportlab = "^4.0.0"
weasyprint = "^60.0"
openai = "^1.0.0"
python-dotenv = "^1.0.0"
gunicorn = "^21.2.0"
dj-database-url = "^2.1.0"
django-redis = "^5.4.0"
django-filter = "^23.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-django = "^4.5.0"
black = "^23.0.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"